# VoxECS

./: CMakeLists.txt  README.md
asset/json/block/: bedrock.json  dark_oak_leaves.json  dark_oak_log.json  dirt.json  grass_block.json  sand.json  sandstone.json  stone.json  water.json
include/: Game.h  GlobalDefinition.h
include/core/: ResourceHelper.h
include/core/ECS/: Component.h  Component.inl  Entity.h
include/core/render/: CustomShader.h  Mesh.h  Mesh2D.h
include/core/utility/: CommonUtils.h  SparseSet.h
include/core/world/: Block.h  Chunk.h  ChunkManager.h
include/game_client/: GameComponents.h  GameScene.h  GameScene.inl
include/game_client/system/: Camera.h  Controls.h  HUD.h  Physics.h  Renderer.h  Weapons.h  World.h
lib/FastNoiseLite/: CMakeLists.txt
lib/glew-2.2.0/: CMakeLists.txt
lib/stb/: CMakeLists.txt
src/: Game.cpp  main.cpp  pch.h
src/core/render/: CustomShader.cpp  Mesh.cpp  Mesh2D.cpp
src/core/utility/: SparseSet.cpp
src/core/world/: Block.cpp  Chunk.cpp  ChunkManager.cpp
src/game_client/: GameScene.cpp
src/game_client/system/: Camera.cpp  Controls.cpp  HUD.cpp  Physics.cpp  Renderer.cpp  Weapons.cpp  World.cpp
src/shader/: block.frag  block.vert  tex2D.frag  tex2D.vert  weapon.frag  weapon.vert
src/shader/Test/: cube.frag  cube.vert
